Tao wants to complain about things like "page alignment" so fixed it

--- a/src/app/profile-create-form/profile-create-form.component.css
+++ b/src/app/profile-create-form/profile-create-form.component.css
@@ -7,7 +7,7 @@ body {
 #profileInfo{
   margin-top: 43px;
   text-align-all: center;
-  margin-left: 10%;
+  margin-left: 20%;
   height: 150%;
   width: 120%;
 
